--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,10 @@ bind -n C-l select-pane -R
 bind -n C-k select-pane -U
 bind -n C-j select-pane -D
 
+bind -n C-M-h resize-pane -L 5
+bind -n C-M-l resize-pane -R 5
+bind -n C-M-k resize-pane -U 5
+bind -n C-M-j resize-pane -D 5
 
 ######################
 ### DESIGN CHANGES ###
