--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-split panes using | and -
-bind | split-window -h
-bind - split-window -v
+#split panes using | and -
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind '%'
 
@@ -130,6 +130,7 @@ set -g @tpm_plugins '          \
   tmux-plugins/tmux-continuum  \
 '
 
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
