--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,7 @@ set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
-set -g status-interval 2
+set -g status-interval 1
 
 # messaging
 set -g message-fg black
@@ -95,8 +95,11 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right-length 50
+set -g status-right ' \
+    #(cat ~/.thyme-tmux) \
+    #[fg=colour233,bg=colour241,bold] %d/%m \
+    #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 100
 set -g status-left-length 20
 
 setw -g window-status-current-fg colour81
@@ -135,3 +138,7 @@ set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Untracked parameters {
+    #[fg=colour233,bg=colour245] #(printf "%%-3s" `test -e /usr/local/bin/pomodoro && pomodoro status`) \
+# }
